Beginnings of backdrop for editable fields

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -67,6 +67,9 @@
     <script src="static/app/base/UserSessionService.js"></script>
     <script src="static/app/base/accordionDirective.js"></script>
     <script src="static/app/base/accordionTitleDirective.js"></script>
+    <script src="static/app/base/editableFieldBackdropDirective.js"></script>
+    <script src="static/app/base/editableFieldContainerDirective.js"></script>
+    <script src="static/app/base/editableFieldDirective.js"></script>
     <script src="static/app/base/expandingTextareaDirective.js"></script>
     <script src="static/app/base/featureContainerDirective.js"></script>
     <script src="static/app/base/snapDrawerDragDirective.js"></script>
