--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -16,7 +16,7 @@
                   <div class="inner-page-content-container" accordion>
                     <div ng-if="showContent('tasks')" ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-                      <div ng-if="isOpen(task)" class="accordion-body">
+                      <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
                         <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
                       </div>
                     </div>
