--- a/frontend/core/src/main/webapp/static/app/tasks/editTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTask.html
@@ -1,33 +1,33 @@
 <div class="no-slides-container" ng-controller="MainController">
-  <div id="edit-page" ng-controller="TasksController">
+  <div id="edit-page" ng-controller="TasksController" editable-field-backdrop>
     <header class="edit-header" edit-header="task" item-edit-form="taskEdit" save-item="saveTask(task)" cancel-edit="cancelEdit()"></header>
     <section id="edit-task" class="one-column-grid page">
       <div class="column">
 
         <div class="content-container simple-content-container">
-          <form class="form-horizontal" role="form" name="taskEdit">
+          <form class="form-horizontal" role="form" name="taskEdit" editable-field-container>
 
             <div class="form-group">
               <label class="sr-only" for="taskTitle">title</label>
-              <input type="text" id="taskTitle" class="simple-input font-bold" ng-model="task.title" placeholder="title..." maxlength="128" required>
+              <input type="text" id="taskTitle" class="simple-input font-bold" ng-model="task.title" placeholder="title..." maxlength="128" required editable-field>
             </div>
             <div class="form-group" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" >
               <label class="sr-only" for="taskDescription">description</label>
-              <textarea id="taskDescription" class="simple-input" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" ng-model="task.description" placeholder="description..." maxlength="1024" expanding-textarea></textarea>
+              <textarea id="taskDescription" class="simple-input" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" ng-model="task.description" placeholder="description..." maxlength="1024" expanding-textarea editable-field></textarea>
             </div>
 
             <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
 
             <div ng-if="task.date" class="form-group">
               <label class="sr-only" for="taskRepeat">repeating</label>
-              <select id="taskRepeat" class="simple-input swiper-no-swiping" ng-model="task.repeating" ng-options="repeatType as repeatType for repeatType in repeatTypes">
+              <select id="taskRepeat" class="simple-input swiper-no-swiping" ng-model="task.repeating" ng-options="repeatType as repeatType for repeatType in repeatTypes" editable-field>
                 <option value="">select repeating...</option>
               </select>
             </div>
 
             <div class="form-group">
               <label class="sr-only" for="taskLink">url</label>
-              <input type="text" id="taskLink" class="simple-input" ng-model="task.link" placeholder="url...">
+              <input type="text" id="taskLink" class="simple-input" ng-model="task.link" placeholder="url..." editable-field>
             </div>
 
           </form>
