--- a/frontend/core/src/main/webapp/static/app/base/editContext.html
+++ b/frontend/core/src/main/webapp/static/app/base/editContext.html
@@ -1,5 +1,5 @@
 <div class="no-slides-container" ng-controller="MainController">
-  <div id="edit-page" ng-controller="ContextsController" editable-field-backdrop>
+  <div id="edit-page" ng-controller="ContextsController">
     <header class="edit-header" edit-header="context" item-edit-form="contextEdit" save-item="saveContext(context)" cancel-edit="cancelEdit()"></header>
     <section id="edit-context" class="one-column-grid page">
       <div class="column">
