--- a/frontend/core/src/main/webapp/static/app/main/editItem.html
+++ b/frontend/core/src/main/webapp/static/app/main/editItem.html
@@ -1,5 +1,5 @@
 <div class="no-slides-container" ng-controller="MainController">
-  <div id="edit-page" ng-controller="ItemsController" editable-field-backdrop>
+  <div id="edit-page" ng-controller="ItemsController">
     <header class="edit-header" edit-header="item" item-edit-form="itemEdit" save-item="saveItem(item)" cancel-edit="cancelEdit()"></header>
     <section id="edit-item" class="one-column-grid page">
       <div class="column">
