--- a/frontend/core/src/main/webapp/static/app/main/omnibar.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibar.html
@@ -42,7 +42,7 @@
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="item in filteredItems = (items | filter:{title:omnibarText.title}) | orderBy:'modified':true">
             <div accordion-title="item" edit-item="editItem(item)" edit-item-title="editItemTitle(item)" toggle-complete="false"></div>
-            <div ng-if="isOpen(item)" class="accordion-body">
+            <div ng-if="isOpen(item)" class="accordion-body" editable-field-container="auto">
               <div ng-include="'static/app/main/itemActions.html'"></div>
             </div>
           </div>
@@ -53,7 +53,7 @@
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="task in filteredTasks = (tasks | filter:{title:omnibarText.title})">
             <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-            <div ng-if="isOpen(task)" class="accordion-body">
+            <div ng-if="isOpen(task)" class="accordion-body" editable-field-container="auto">
               <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
             </div>
           </div>
@@ -64,7 +64,7 @@
         <div class="inner-page-content-container" accordion>
           <div ng-repeat="note in filteredNotes = (notes | filter:{title:omnibarText.title})">
             <div accordion-title="note" edit-item="editNote(task)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete></div>
-            <div ng-if="isOpen(note)" class="accordion-body">
+            <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
               <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
             </div>
           </div>
