--- a/frontend/core/src/main/webapp/static/app/notes/editNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/editNote.html
@@ -1,5 +1,5 @@
 <div class="no-slides-container" ng-controller="MainController">
-  <div id="edit-page" ng-controller="NotesController" editable-field-backdrop>
+  <div id="edit-page" ng-controller="NotesController">
     <header class="edit-header" edit-header="note" item-edit-form="noteEdit" save-item="saveNote(note)" cancel-edit="cancelEdit()"></header>
     <section id="edit-note" class="one-column-grid page">
       <div class="column">
