--- a/frontend/core/src/main/webapp/static/app/tasks/editTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTask.html
@@ -1,5 +1,5 @@
 <div class="no-slides-container" ng-controller="MainController">
-  <div id="edit-page" ng-controller="TasksController" editable-field-backdrop>
+  <div id="edit-page" ng-controller="TasksController">
     <header class="edit-header" edit-header="task" item-edit-form="taskEdit" save-item="saveTask(task)" cancel-edit="cancelEdit()"></header>
     <section id="edit-task" class="one-column-grid page">
       <div class="column">
