--- a/frontend/core/src/main/webapp/static/app/tasks/overview.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/overview.html
@@ -14,9 +14,9 @@
             </li>
             <li>
               <form class="swiper-no-swiping add-element" role="form" name="addContextForm" ng-submit="addContext(newContext)" autocapitalize="none" autocorrect="off">
-                <div class="form-group">
+                <div class="form-group" editable-field-container>
                   <label class="sr-only" for="contextTitle">title</label>
-                  <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" placeholder="add context..."></input>
+                  <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" placeholder="add context..." editable-field></input>
                 </div>
               </form>
             </li>
