--- a/frontend/core/src/main/webapp/static/app/base/listsOverview.html
+++ b/frontend/core/src/main/webapp/static/app/base/listsOverview.html
@@ -9,9 +9,9 @@
     </li>
     <li>
       <form class="swiper-no-swiping add-element" role="form" name="addListForm" ng-submit="addList(newList)" autocapitalize="none" autocorrect="off">
-        <div class="form-group">
+        <div class="form-group" editable-field-container>
           <label class="sr-only" for="listTitle">title</label>
-          <input type="text" class="simple-input" id="listTitle" ng-model="newList.title" placeholder="add list..."></input>
+          <input type="text" class="simple-input" id="listTitle" ng-model="newList.title" placeholder="add list..." editable-field></input>
         </div>
       </form>
     </li>
