--- a/frontend/core/src/main/webapp/static/app/notes/unsorted.html
+++ b/frontend/core/src/main/webapp/static/app/notes/unsorted.html
@@ -1,7 +1,7 @@
 <section id="notes-unsorted" class="two-column-grid page" ng-controller="NotesController">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'unsorted'; omnibarFeature = 'notes'" ng-include="'static/app/main/omnibar.html'"></div>
-    <div ng-hide="omnibarVisible && isActiveSlide('unsorted')" class="content-container page-content-container no-heading-content-container">
+    <div ng-hide="omnibarVisible && isActiveSlide('home')" class="content-container page-content-container no-heading-content-container">
       <div class="inner-page-content-container">
         <div>
           <div class="inner-page-content-container" accordion>
@@ -11,7 +11,7 @@
                   <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
                 </div>
               </div>
-              <div ng-if="isOpen(note)" class="accordion-body">
+              <div ng-if="isOpen(note)" class="accordion-body" editable-field-container="auto">
                 <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
               </div>
               <div ng-if="!note.content" class="teaser-empty"></div>
