Fixed teaser grayed out when note quick edit open

--- a/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
+++ b/frontend/core/src/main/webapp/static/app/base/accordionTitle.html
@@ -24,5 +24,5 @@
       </button>
     </div>
   </form>
-  <div ng-transclude></div>
+  <div ng-transclude ng-class="isOpen && 'editable-field-container active'"></div>
 </div>
