Refactore auth/main to auth/root to avoid confusion with other uses of 'main'

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -21,9 +21,7 @@
   </script>
 </head>
 <body>
-
-  <div main-view></div>
-
+  <div class="web" root-view></div>
   <script src="static/em.min.js"></script>
 </body>
 </html>
