--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-    <div class="web" main-view ng-controller="MockController"></div>
+    <div class="web" root-view ng-controller="MockController"></div>
 
     <script src="static/lib/jquery/jquery.js"></script>
     <script src="static/lib/jasmine/jasmine.js"></script>
@@ -86,7 +86,7 @@
     <script src="static/app/auth/LoginController.js"></script>
     <script src="static/app/auth/SignupController.js"></script>
     <script src="static/app/auth/PasswordController.js"></script>
-    <script src="static/app/auth/mainViewDirective.js"></script>
+    <script src="static/app/auth/rootViewDirective.js"></script>
     <script src="static/app/auth/MenuController.js"></script>
     <script src="static/app/auth/VerifyController.js"></script>
 
