--- a/frontend/cordova/app/merges/android/index.html
+++ b/frontend/cordova/app/merges/android/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
+  Licensed to the Apache Software Foundation (ASF) under one
+  or more contributor license agreements.  See the NOTICE file
+  distributed with this work for additional information
+  regarding copyright ownership.  The ASF licenses this file
+  to you under the Apache License, Version 2.0 (the
+  "License"); you may not use this file except in compliance
+  with the License.  You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
+  http://www.apache.org/licenses/LICENSE-2.0
 
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
+  Unless required by applicable law or agreed to in writing,
+  software distributed under the License is distributed on an
+  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+   KIND, either express or implied.  See the License for the
+  specific language governing permissions and limitations
+  under the License.
 -->
 <html ng-app="em.app">
 <head>
-    <meta charset="utf-8" />
-    <meta name="fragment" content="!" />
-    <meta name="format-detection" content="telephone=no" />
+  <meta charset="utf-8" />
+  <meta name="fragment" content="!" />
+  <meta name="format-detection" content="telephone=no" />
 
-    <title ng-bind="page.getTitle()"></title>
+  <title ng-bind="page.getTitle()"></title>
 
-    <style type="text/css">
+  <style type="text/css">
     @font-face {
       font-family: 'HelveticaNeueLTStd-Lt';
       src: url('static/fonts/HelveticaNeueLight.ttf') format("truetype");
@@ -34,22 +34,20 @@
       font-family: 'HelveticaNeueLT-Roman';
       src: url('static/fonts/HelveticaNeueRoman.ttf') format('truetype');
     }
-    </style>
+  </style>
 
-    <link rel="stylesheet" href="static/css/em.css"/>
-    <script>
-      var packaging = "android-cordova";
-      var urlPrefix = 'https://ext.md';
-      var html5Mode = false;
-      var bindToFocusEvent = false;
-      var bindToResumeEvent = true;
-      var useOfflineBuffer = true;
+  <link rel="stylesheet" href="static/css/em.css"/>
+  <script>
+    var packaging = "android-cordova";
+    var urlPrefix = 'https://ext.md';
+    var html5Mode = false;
+    var bindToFocusEvent = false;
+    var bindToResumeEvent = true;
+    var useOfflineBuffer = true;
   </script>
 </head>
 <body>
-
-    <div class="android" main-view/>
-
-    <script src="static/em.min.js"></script>
+  <div class="android" root-view></div>
+  <script src="static/em.min.js"></script>
 </body>
 </html>
