--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -1,7 +1,7 @@
 <section id="tasks-dates" class="two-column-grid page single-lineheight" ng-controller="DatesController">
   <div class="column" ng-controller="TasksController">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'dates'; omnibarFeature = 'tasks'" ng-include="'static/app/main/omnibar.html'"></div>
-    <div ng-hide="(omnibarVisible && isActiveSlide('home')) || isLoading" class="content-container page-content-container omnibar-animation">
+    <div ng-if="!isLoading" ng-hide="omnibarVisible && isActiveSlide('home')" class="content-container page-content-container omnibar-animation">
       <div ng-if="isDatepickerVisible" class="swiper-no-swiping" data-snap-ignore="true" datepicker></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="weekdays.length">
         <div class="swiper-wrapper">
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div ng-if="isLoading && !omnibarVisible" class="loading-animation" loading-animation></div>
+    <div ng-if="isLoading" class="loading-animation" loading-animation></div>
   </div>
   <aside class="column">
     TODO
