Fixed problem with backdrop disable being sticky, and thus in editTask etc. there was no possibility to disable backdrop. Now disabling backdrop for add list.. and add context..

--- a/frontend/core/src/main/webapp/static/app/base/listsOverview.html
+++ b/frontend/core/src/main/webapp/static/app/base/listsOverview.html
@@ -9,7 +9,7 @@
     </li>
     <li>
       <form class="swiper-no-swiping add-element" role="form" name="addListForm" ng-submit="addList(newList)" autocapitalize="none" autocorrect="off">
-        <div class="form-group" editable-field-container>
+        <div class="form-group" editable-field-container="disable">
           <label class="sr-only" for="listTitle">title</label>
           <input type="text" class="simple-input" id="listTitle" ng-model="newList.title" placeholder="add list..." editable-field></input>
         </div>
