--- a/frontend/core/src/main/webapp/static/app/tasks/overview.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/overview.html
@@ -14,7 +14,7 @@
             </li>
             <li>
               <form class="swiper-no-swiping add-element" role="form" name="addContextForm" ng-submit="addContext(newContext)" autocapitalize="none" autocorrect="off">
-                <div class="form-group" editable-field-container>
+                <div class="form-group" editable-field-container="disable">
                   <label class="sr-only" for="contextTitle">title</label>
                   <input type="text" id="contextTitle" class="simple-input" ng-model="newContext.title" placeholder="add context..." editable-field></input>
                 </div>
